Fix menu and big gap on homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,6 @@ nav li a {
 }
 
 #articles article {
-    flex: 1;
     background-color: blanchedalmond;
     padding-right: 20px;
     padding-left: 20px;
@@ -63,18 +62,24 @@ footer div {
     flex: 1;
 }
 
+main {
+    margin-bottom: 15px;
+}
+
 #menu {
-    margin-right: 2%;
-    margin-left: 2%;
+    margin-right: 1%;
+    margin-left: 1%;
     background-color: blanchedalmond;
     border-radius: 25px;
+    display: flex;
+    padding: 1%;
 }
 
 #menu article {
-    flex: 1;
     color: grey;
     margin-left: 20px;
-    display: grid;
+    flex: 1;
+    margin-left: 3%;
 }
 
 #menu .desc {
@@ -94,8 +99,8 @@ footer div {
     margin-right: 25px;
 }
 
-#topImage h1 {
-    padding-top: 15px;
+#topImage h2 {
+    padding-top: 20px;
 }
 
 #aboutContainer {
@@ -107,4 +112,15 @@ footer div {
     border-radius: 25px;
     margin-right: 2%;
     margin-left: 2%;
+}
+
+#bookingForm {
+    text-align: center;
+    background-color: blanchedalmond;
+    border-radius: 25px;
+    padding: 10px;
+}
+
+#bookingForm div {
+    padding: 5px;
 }
